# cc_toolchains_linux

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md
.github/workflows/: workflow.yml
example/: .bazelrc
examples/: .bazelrc  .gitignore  MODULE.bazel
toolchains/args/: BUILD.bazel
toolchains/gcc-linux-loongarch64/: BUILD.bazel  gcc.BUILD.bazel
toolchains/gcc-linux-loongarch64/args/: BUILD.bazel
toolchains/gcc-linux-loongarch64/tools/: BUILD.bazel
toolchains/gcc-linux-loongarch64/tools/wrapper/: ar.sh  gcc.sh  ld.sh
toolchains/gcc-musl-linux-riscv64/: BUILD.bazel  gcc.BUILD.bazel
toolchains/gcc-musl-linux-riscv64-licheerv/: BUILD.bazel
toolchains/gcc-musl-linux-riscv64-licheerv/args/: BUILD.bazel
toolchains/gcc-musl-linux-riscv64-licheerv/tools/: BUILD.bazel
toolchains/gcc-musl-linux-riscv64-licheerv/tools/wrapper/: ar.sh  gcc.sh  ld.sh
toolchains/gcc-ulibc-linux-armv7l-luckfox/: BUILD.bazel  gcc.BUILD.bazel
toolchains/gcc-ulibc-linux-armv7l-luckfox/args/: BUILD.bazel
toolchains/gcc-ulibc-linux-armv7l-luckfox/tools/: BUILD.bazel
toolchains/gcc-ulibc-linux-armv7l-luckfox/tools/wrapper/: ar.sh  gcc.sh  ld.sh
toolchains/glibc-linux-gnu-x86_64/: BUILD  BUILD.bazel  gcc.BUILD.bazel
toolchains/glibc-linux-gnu-x86_64/args/: BUILD.bazel
toolchains/glibc-linux-gnu-x86_64/tools/: BUILD.bazel
toolchains/glibc-linux-gnu-x86_64/tools/wrapper/: ar.sh  g++.sh  gcc.sh  ld.sh
toolchains/glibc-linux-gnu-x86_64/wrappers/: wrapper
toolchains/musl-linux-aarch64/: BUILD.bazel  gcc.BUILD.bazel
toolchains/musl-linux-aarch64/args/: BUILD.bazel
toolchains/musl-linux-aarch64/tools/: BUILD.bazel
toolchains/musl-linux-aarch64/tools/wrapper/: ar.sh  gcc.sh  ld.sh
