module(
    name = "cc_toolchains_linux",
    version = "0.0.1",
)

bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "rules_cc", version = "0.2.14")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "gcc-linux-x86_64",
    build_file = "//toolchains/glibc-linux-gnu-x86_64:gcc.BUILD.bazel",
    integrity = "sha256-hq7+2gJWgu+FkI/x0cimrps7ueq5cDMQ2jCzdNu2DWE=",
    strip_prefix = "",
    type = "tar.bz2",
    url = "https://github.com/ClangTools/clang-binaries/releases/download/linux-gcc12-x86_64-buildroot-2022.11.3-glibc.2.36/linux-gcc12-x86_64-buildroot-2022.11.3-gnu-glibc_2.36.tar.bz2",
)

http_archive(
    name = "musl-linux-aarch64",
    build_file = "//toolchains/musl-linux-aarch64:gcc.BUILD.bazel",
    integrity = "sha256-NVQ5GproLMH+NaarDJ76NKW6xUdLbVJ0dJlyVuFIwpc=",
    strip_prefix = "aarch64--musl--stable-2023.11-1",
    type = "tar.bz2",
    url = "https://toolchains.bootlin.com/downloads/releases/toolchains/aarch64/tarballs/aarch64--musl--stable-2023.11-1.tar.bz2",
)

http_archive(
    name = "gcc-ulibc-linux-armv7l-luckfox",
    build_file = "//toolchains/gcc-ulibc-linux-armv7l-luckfox:gcc.BUILD.bazel",
    integrity = "sha256-9q8QMKdGtKxr8ycKRtefYqISqdzH5mG0oVLOR2f4DuI=",
    type = "tar.gz",
    url = "https://github.com/kekxv/luckfox-bazel/releases/download/linux-rockchip830-uclibcgnu-toolchain/arm-rockchip830-linux-uclibcgnueabihf.tar.gz",
)

http_archive(
    name = "gcc-musl-linux-riscv64",
    build_file = "//toolchains/gcc-musl-linux-riscv64:gcc.BUILD.bazel",
    integrity = "sha256-7+rtUR7j3+gMQPqgAfkBWfQUhNlzmuyAV+wfJ13F/Ac=",
    strip_prefix = "riscv64-linux-musl-x86_64",
    type = "tar.xz",
    url = "https://github.com/ClangTools/clang-binaries/releases/download/riscv64-linux-musl-x86_64-20240201/riscv64-linux-musl-x86_64.tar.xz",
)

register_execution_platforms(
    "//:linux-x86_64",
    "//:linux-aarch64",
    "//:linux-riscv64",
    "//:linux-armv7l-luckfox",
)

register_toolchains(
    "//:linux-x86_64-toolchain",
    "//:linux-aarch64-toolchain",
    "//:linux-riscv64-licheerv-toolchain",
    "//:linux-armv7l-luckfox-toolchain",
)
