bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "rules_cc", version = "0.2.14")
bazel_dep(name = "rules_foreign_cc", version = "0.14.0")
bazel_dep(name = "cc_toolchains_linux", version = "0.0.1")
local_path_override(
    module_name = "cc_toolchains_linux",
    path = "..",
)

include("//third-party/fmtlib:repositories.MODULE.bazel")

register_execution_platforms(
    "@cc_toolchains_linux//:linux-x86_64",
    "@cc_toolchains_linux//:linux-aarch64",
    "@cc_toolchains_linux//:linux-riscv64",
    "@cc_toolchains_linux//:linux-armv7l-luckfox",
)

register_toolchains(
    "@cc_toolchains_linux//:linux-x86_64-toolchain",
    "@cc_toolchains_linux//:linux-aarch64-toolchain",
    "@cc_toolchains_linux//:linux-riscv64-licheerv-toolchain",
    "@cc_toolchains_linux//:linux-armv7l-luckfox-toolchain",
)
