# Copyright 2025 The Bazel Authors. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_cc//cc/toolchains:tool.bzl", "cc_tool")
load("@rules_cc//cc/toolchains:tool_map.bzl", "cc_tool_map")

licenses(["notice"])

exports_files([
    "wrapper/ld.sh",
    "wrapper/gcc.sh",
    "wrapper/ar.sh",
])

filegroup(
    name = "toolchain_wrapper",
    srcs = [
        "wrapper/ar.sh",
        "wrapper/gcc.sh",
        "wrapper/ld.sh",
    ],
)

cc_tool_map(
    name = "all_tools",
    tools = {
        "@rules_cc//cc/toolchains/actions:ar_actions": ":ar",
        "@rules_cc//cc/toolchains/actions:assembly_actions": ":gcc",
        "@rules_cc//cc/toolchains/actions:c_compile": ":gcc",
        "@rules_cc//cc/toolchains/actions:cpp_compile_actions": ":g++",
        "@rules_cc//cc/toolchains/actions:link_actions": ":ld",
        "@rules_cc//cc/toolchains/actions:objcopy_embed_data": ":objcopy",
        "@rules_cc//cc/toolchains/actions:strip": ":strip",
    },
    visibility = ["//visibility:public"],
)

cc_tool(
    name = "gcc",
    #src = "@gcc-ulibc-linux-armv7l-luckfox//:bin/arm-rockchip830-linux-uclibcgnueabihf-gcc",
    src = ":wrapper/gcc.sh",
    data = [
        ":exec_platform_builtin_headers",
        ":exec_platform_linker_builtins",
        ":exec_platform_multicall_support_files",
        ":toolchain_wrapper",
    ],
)

cc_tool(
    name = "g++",
    # src = "@gcc-ulibc-linux-armv7l-luckfox//:bin/arm-rockchip830-linux-uclibcgnueabihf-g++",
    src = ":wrapper/gcc.sh",
    data = [
        ":exec_platform_builtin_headers",
        ":exec_platform_linker_builtins",
        ":exec_platform_multicall_support_files",
        ":toolchain_wrapper",
    ],
)

cc_tool(
    name = "ld",
    #src = "@gcc-ulibc-linux-armv7l-luckfox//:bin/arm-rockchip830-linux-uclibcgnueabihf-ld",
    src = ":wrapper/ld.sh",
    data = [
        ":exec_platform_builtin_headers",
        ":exec_platform_linker_builtins",
        ":exec_platform_multicall_support_files",
        ":toolchain_wrapper",
    ],
)

cc_tool(
    name = "ar",
    #src = "@gcc-ulibc-linux-armv7l-luckfox//:bin/arm-rockchip830-linux-uclibcgnueabihf-ar",
    src = ":wrapper/ar.sh",
    data = [
        ":exec_platform_builtin_headers",
        ":exec_platform_linker_builtins",
        ":exec_platform_multicall_support_files",
        ":toolchain_wrapper",
    ],
)

cc_tool(
    name = "objcopy",
    src = "@gcc-ulibc-linux-armv7l-luckfox//:bin/arm-rockchip830-linux-uclibcgnueabihf-objcopy",
)

cc_tool(
    name = "objdump",
    src = "@gcc-ulibc-linux-armv7l-luckfox//:bin/arm-rockchip830-linux-uclibcgnueabihf-objdump",
)

cc_tool(
    name = "gcov",
    src = "@gcc-ulibc-linux-armv7l-luckfox//:bin/arm-rockchip830-linux-uclibcgnueabihf-gcov",
)

cc_tool(
    name = "strip",
    src = "@gcc-ulibc-linux-armv7l-luckfox//:bin/arm-rockchip830-linux-uclibcgnueabihf-strip",
)

#################################
#   Platform-specific aliases   #
#################################

# These aliases are used to reduce duplication of `select` statements throughout
# this build file. The select statements in these aliases are evaluated under
# the exec configuration.

alias(
    name = "exec_platform_builtin_headers",
    actual = "@gcc-ulibc-linux-armv7l-luckfox//:builtin_headers",
    visibility = ["//visibility:private"],
)

alias(
    name = "exec_platform_multicall_support_files",
    actual = "@gcc-ulibc-linux-armv7l-luckfox//:multicall_support_files",
    visibility = ["//visibility:private"],
)

alias(
    name = "exec_platform_linker_builtins",
    actual = "@gcc-ulibc-linux-armv7l-luckfox//:linker_builtins",
    visibility = ["//visibility:private"],
)
